cabal-version:      2.4
name:               example-pieces
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Cian O'Connor
maintainer:         cianoconnor@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0,
                      music-suite
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: BangPatterns,
                        ConstrainedClassMethods,
                        ConstraintKinds,
                        DeriveDataTypeable,
                        DeriveFoldable,
                        DeriveFunctor,
                        DeriveGeneric,
                        DeriveLift,
                        DeriveTraversable,
                        DerivingStrategies,
                        EmptyDataDecls,
                        EmptyDataDeriving,
                        ExistentialQuantification,
                        ExplicitForAll,
                        FlexibleContexts,
                        FlexibleInstances,
                        GADTSyntax,
                        GeneralisedNewtypeDeriving,
                        GeneralizedNewtypeDeriving,
                        InstanceSigs,
                        KindSignatures,
                        MultiParamTypeClasses,
                        NamedFieldPuns,
                        NoMonomorphismRestriction,
                        OverloadedStrings,
                        PolyKinds,
                        RankNTypes,
                        ScopedTypeVariables,
                        StandaloneDeriving,
                        StarIsType,
                        TupleSections,
                        TypeApplications,
                        TypeFamilies,
                        TypeOperators,
                        TypeSynonymInstances,
                        ViewPatterns
 

  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wno-name-shadowing
    -Wwarn


